<resources>
    <string name="app_name">SimonDice</string>
    <string name="titulo">SimonDice</string>
    <string name="rojo">Rojo</string>
    <string name="jugar">Jugar</string>
    <string name="amarillo">Amarillo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <!--Toast-->
    <string name="repetir">Repite la secuencia</string>
    <string name="fin">Fin del juego</string>
    <string name="secuenciaTerminada">Espera a que termine la secuencia</string>

</resources>